force-app/main/default/objects/MUSW__Template_Related_Object__c/MUSW__Template_Related_Object__c.object-meta.xml
<CustomObject>
    <label>Template Related Object</label>
    <nameField>
        <label>Template Related Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>