force-app/main/default/objects/MUSW__Template_Related_Object__c/fields/MUSW__Parent_Template_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parent_Template_Object_Mapping__c</fullName>
    <description>Parent Record Template Object Mapping</description>
    <label>Parent Template Object Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Template Related Record Mappings</relationshipLabel>
    <relationshipName>Template_Related_Record_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>