force-app/main/default/objects/MUSW__Template_Related_Object__c/fields/MUSW__Related_Record_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Record_Object_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Record Object Mapping</description>
    <label>Related Record Object Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipName>Template_Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>