force-app/main/default/objects/MUSW__Template_Related_Object__c/fields/MUSW__Source_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Source_Relationship_Name__c</fullName>
    <label>Source Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>